# obs-lr-prC

.obsidian/: workspace.json
lr2/: Лузан Б. О. ИВТ 2.1 Лр. 2.md
lr3/: Лузан Б.О. ИВТ 2.1 Лр. 3.md
lr4/: Лузан Б.О. ИВТ 2.1 Лр. 1.md  Лузан Б.О. ИВТ 2.1 Лр. 4.md
lr5/: Лузан Б.О. ИВТ 2.1 ЛР5.md
lr5/lr5/proj1/: CMakeLists.txt  Makefile  data.c  data.h  input.txt  main.c  meson.built  output.txt
lr5/lr5/proj2/: CMakeLists.txt  Makefile  client.c  meson.build  net_utils.c  net_utils.h  server.c
lr5/lr5/proj3/: CMakeLists.txt  Makefile  htmlutils.c  htmlutils.h  main.c  meson.build  test1.html  test2.html  test3.html
lr5/lr5/proj4/: CMakeLists.txt  Makefile  linalg.c  linalg.h  main.c
rust/lr1/: Лузан Б. О. ИВТ 2.1 Лр. 1.md
